# n00b

./: .gitignore  .gitmodules  CONTRIBUTING.md  DEPLOYMENTS.md  README.md  cli_setup.md  docker-compose.yml  doit.ps1  doit.sh  faq.md  free-resources.md  free-tier-llms.md  free-tier-notes.md  launch_mytool_server.ps1  startup.md  studyguide.md  timeline.md  tutorial.md
mytool/: Cargo.toml  Dockerfile  README.md
mytool/src/: cache.rs  cli.rs  code_indexer.rs  github.rs  github_cache.rs  main.rs  mock_github_client.rs  repo_index.rs  syscall_executor.rs  syscall_types.rs  trust_metric.rs
mytool/src/server/: mod.rs  prelude.rs  runner.rs  state.rs
mytool/src/server/handlers/: get_indexed_code_handler.rs  get_org_repos_filtered.rs  get_repo.rs  get_user.rs  health_check_handler.rs  index_code_handler.rs  list_indexed_code_metadata_handler.rs  list_starred_repos_handler.rs  list_user_forked_repos_handler.rs  mod.rs  search_repositories_handler.rs
mytool/src/server/paths/: get_code_path.rs  index_code_path.rs  mod.rs  org_repos_path.rs  repo_path.rs  user_path.rs  user_repos_path.rs
mytool/src/server/queries/: filter_query.rs  search_query.rs
mytool/src/server/tests/: helpers.rs  mod.rs  test_get_indexed_code_not_found.rs  test_get_org_repos_filtered_success.rs  test_get_org_repos_not_found.rs  test_get_repo_not_found.rs  test_get_repo_success.rs  test_get_user_not_found.rs  test_get_user_success.rs  test_health_check.rs  test_index_and_retrieve_code_success.rs  test_index_code_fetch_error.rs  test_list_starred_repos_success.rs  test_search_repositories_success.rs  (+1 more)
(+6 files in other folders)
