[package]
name = "mytool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] } # Use blocking for simpler initial CLI examples
tokio = { version = "1", features = ["full"] } # Required for async operations with reqwest
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] } # Bundled for easier setup
url = "2.3"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0" # For simplified error handling
async-trait = "0.1" # If traits need to be async
dotenv = "0.15" # For loading environment variables from .env
rocksdb = "0.20" # For caching GitHub API responses
actix-web = "4" # For building the HTTP server
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1.0", features = ["serde"] }

[dev-dependencies]
tempfile = "3" # For creating temporary directories in tests